# singh4

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  singh4.nomad
ci/: pipeline.yml
src/: main.rs
src/commands/: general.rs  mod.rs  transcode.rs
src/handler/: mod.rs
src/lib/: ffmpeg.rs  messages.rs  mod.rs
